<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ad5932_control">

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference"
            app:title="@string/ad5932_dac_enable" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference"
            app:title="@string/ad5932_sine_tri" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference"
            app:title="@string/ad5932_msbout" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference"
            app:title="@string/ad5932_inc_mode" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference"
            app:title="@string/ad5932_syncsel" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="Switch preference"
            app:title="@string/ad5932_syncout" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ad5932_number_of_increments">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Edit text preference"
            app:title="@string/ad5932_number_of_increments" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="Preference category"
        app:title="@string/ad5932_delta_frequency">

    </PreferenceCategory>
    <PreferenceCategory
        android:title="Preference category"
        app:title="@string/ad5932_increment_control"/>
    <PreferenceCategory
        android:title="Preference category"
        app:title="@string/ad5932_start_frequency">

    </PreferenceCategory>

</PreferenceScreen>