<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AD5932SettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ad5932_control"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <Switch
                        android:id="@+id/b24_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ad5932_b24"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/dac_en_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ad5932_dac_enable"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/b24_sw" />

                    <Switch
                        android:id="@+id/sine_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ad5932_sine_tri"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dac_en_sw" />

                    <Switch
                        android:id="@+id/msbout_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ad5932_msbout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sine_sw" />

                    <Switch
                        android:id="@+id/int_inc_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ad5932_inc_mode"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/msbout_sw" />

                    <Switch
                        android:id="@+id/synsel_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ad5932_syncsel"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/int_inc_sw" />

                    <Switch
                        android:id="@+id/syncout_sw"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/ad5932_syncout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/synsel_sw" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ad5932_number_of_increments"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/constraintLayout4"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <EditText
                        android:id="@+id/number_inc_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:ems="10"
                        android:hint="@string/ad5932_number_of_increments"
                        android:inputType="numberDecimal"
                        android:digits="0123456789"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ad5932_delta_frequency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <EditText
                        android:id="@+id/delta_frequency_text_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="48sp"
                        android:ems="10"
                        android:hint="@string/ad5932_delta_frequency"
                        android:inputType="numberDecimal"
                        android:digits="0123456789,.-"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/delta_frequency_prefix_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48sp"
                        android:entries="@array/frquencyPrefix"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/delta_frequency_text_edit"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ad5932_increment_control"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <Switch
                        android:id="@+id/period_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ad5932_increment_by"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/duration_edit_text"
                        app:layout_constraintTop_toBottomOf="@id/multiplier_spinner" />

                    <EditText
                        android:id="@+id/duration_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ad5932_increment_interval"
                        android:inputType="numberDecimal"
                        android:digits="0123456789"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/multiplier_spinner" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="48sp"
                        android:text="@string/ad5932_multiplier"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/multiplier_spinner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/multiplier_spinner"
                        app:layout_constraintEnd_toStartOf="@id/multiplier_spinner"
                        app:layout_constraintStart_toEndOf="@id/textView6"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/multiplier_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48sp"
                        android:entries="@array/MultiplierNames"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/textView6"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ad5932_start_frequency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <EditText
                        android:id="@+id/start_frequency_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ad5932_start_frequency"
                        android:inputType="numberDecimal"
                        android:digits="0123456789,."
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/start_frequency_prefix_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/frquencyPrefix"
                        app:layout_constraintBottom_toBottomOf="@id/start_frequency_edit_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/start_frequency_edit_text"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/applyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/apply"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />
                />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>